@@ -3,15 +3,3 @@ plugins {
     id 'io.micronaut.build.internal.quality-reporting'
 }
 
-repositories {
-    mavenCentral()
-    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
-}
-
-subprojects { Project subproject ->
-    tasks.withType(Test) {
-        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
-            jvmArgs '--enable-preview'
-        }
-    }
-}
